[package]
name = "fractalchain"
version = "0.1.0"
edition = "2018"

[dependencies]
bitcoin = "0.27.0"
nakamoto = { path = "../../fractalide/nakamoto", version = "0.2.0" }
copernica-protocols = "0.1.0"
crossbeam-channel = { version = "0.4" }
anyhow = "1.0.43"
log = { version = "0.4", features = ["std"] }
argh = { version = "0.1.3" }
chrono = { version = "0.4" }
